--- a/jsp-tutorials/webapp/index.html
+++ b/jsp-tutorials/webapp/index.html
@@ -45,6 +45,9 @@
                                                         <li>
                                                                 <a href="#">Episode 3</a>
                                                         </li>
+                                                        <li>
+                                                                <a href="#">Episode 4</a>
+                                                        </li>
                                                 </ul>
                                         </li>
                                         <li>
