--- a/jsp-tutorials/webapp/index.html
+++ b/jsp-tutorials/webapp/index.html
@@ -11,8 +11,6 @@
                 <meta name="description" content="JSP Tutorial" />
                 <meta name="author" content="Min Lwin" />
 
-                <meta name="viewport" content="width=device-width; initial-scale=1.0" />
-
                 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
                 <script type="text/javascript" src="js/menu.js"></script>
                 <link rel="stylesheet" href="theme/menu.css" type="text/css" />
@@ -47,6 +45,9 @@
                                                         </li>
                                                         <li>
                                                                 <a href="#">Episode 4</a>
+                                                        </li>
+                                                        <li>
+                                                                <a href="#">Episode 5</a>
                                                         </li>
                                                 </ul>
                                         </li>
