--- a/jsp-tutorials/webapp/index.html
+++ b/jsp-tutorials/webapp/index.html
@@ -49,6 +49,9 @@
                                                         <li>
                                                                 <a href="#">Episode 5</a>
                                                         </li>
+                                                        <li>
+                                                                <a href="#">Episode 6</a>
+                                                        </li>
                                                 </ul>
                                         </li>
                                         <li>
