--- a/jsp-tutorials/webapp/index.html
+++ b/jsp-tutorials/webapp/index.html
@@ -33,7 +33,7 @@
                                         </li>
                                         <li>
                                                 <a href="#" class="selected">Tutorials > </a>
-                                                <ul>
+                                                <ul id="tutorials"  title="8">
                                                         <li>
                                                                 <a href="#">Episode 1</a>
                                                         </li>
@@ -54,7 +54,10 @@
                                                         </li>
                                                         <li>
                                                                 <a href="#">Episode 7</a>
-                                                        </li>
+                                                        </li> 
+                                                        <li>
+                                                                <a href="#">Episode 8</a>
+                                                        </li> 
                                                 </ul>
                                         </li>
                                         <li>
